--- a/results.html
+++ b/results.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link href="./public/CSS/style.css" rel="stylesheet" type="text/css">
+    <link href="./public/CSS/stylenogrid.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Dawning+of+a+New+Day|La+Belle+Aurore" rel="stylesheet">
     <title>Thinking Cat</title>
   </head>
