--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link href="./public/CSS/style.css" rel="stylesheet" type="text/css">
+    <link href="./public/CSS/stylenogrid.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Dawning+of+a+New+Day|La+Belle+Aurore" rel="stylesheet">
     <title>Thinking Cat</title>
   </head>
@@ -13,19 +13,21 @@
               <header><h4>Whiskerton,</h4></header>
               <div id="display-unit">
 
+                <!-- <img src="http://your-image.jpg" style="visibility: hidden;" /> -->
                 <!-- script.js jquery dynamic elements live here -->
 
               </div> <!-- display-unit -->
 
-              <div id="result">
+              <div id="last-link">
                 <form>
                 <input id="cat-data" name="catdata" value="" />
                 <!-- in script.js, always update value of catdata every turn -->
                   <button><a href="results.html">Results</a></button>
                 </form>
-                <a href="logout.html">logout</a>
+                <!-- <a href="logout.html">logout</a> -->
               </div> <!-- result -->
 
+          </div> <!-- main container -->
 
     <script src="./public/JS/jquery.js"></script>
     <script src="./public/JS/script.js"></script>
