--- a/results.html
+++ b/results.html
@@ -10,6 +10,7 @@
   <!-- front-end only -->
 
     <div class="main-container">
+      <header><h4>Results</h4></header>
 
 <!-- adding for f e only version -->
 <!-- adding for f e only version -->
@@ -29,7 +30,7 @@
     </div> <!-- main container -->
 
     <script src="./public/JS/jquery.js"></script>
-    <script src="./public/JS/script.js"></script>
+    <!-- <script src="./public/JS/script.js"></script> -->
   </body>
 </html>
 
