add click areas to image and sweeten js code and game data

--- a/index.html
+++ b/index.html
@@ -14,16 +14,12 @@
               <div id="display-unit">
                 <div class="message"></div>
                 <div class="room-image">
-                  <img src="public/images/x-size.png" style="visibility: hidden;" />
-                  <map name="choices">
-                    <area class="id1"
-                      shape="rect"
-                      coords="0,0,530,410"
-                      href="#" alt="alt"
-                      target="_self"
-                      onMouseOver="showChoice('0')"
-                      onMouseOut="showChoice('')"/>
+                  <img src="public/images/x-size.png" usemap= "#map" style="opacity: 0;" />
+                  <map name="map" id="map">
+
                   </map>
+                                        <!-- onMouseOver="showChoice('0')"
+                      onMouseOut="showChoice('')"/> -->
 
                 </div> <!-- room-image -->
                 <div class="status"></div>
